fixed compatibility issues